new URL deprecated, use URI