@@ -11,6 +11,8 @@ import org.jsoup.select.Elements;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -29,8 +31,8 @@ public class RedgifsRipper extends AbstractHTMLRipper {
     int searchCount = 150;
     int searchStart = 0;
 
-    public RedgifsRipper(URL url) throws IOException {
-        super(new URL(url.toExternalForm().replace("thumbs.", "")));
+    public RedgifsRipper(URL url) throws IOException, URISyntaxException {
+        super(new URI(url.toExternalForm().replace("thumbs.", "")).toURL());
     }
 
     @Override
@@ -47,12 +49,12 @@ public class RedgifsRipper extends AbstractHTMLRipper {
     }
 
     @Override
-    public URL sanitizeURL(URL url) throws MalformedURLException {
+    public URL sanitizeURL(URL url) throws MalformedURLException, URISyntaxException {
         String sUrl = url.toExternalForm();
         sUrl = sUrl.replace("/gifs/detail", "");
         sUrl = sUrl.replace("/amp", "");
         sUrl = sUrl.replace("gifdeliverynetwork.com", "redgifs.com/watch");
-        return new URL(sUrl);
+        return new URI(sUrl).toURL();
     }
 
     public Matcher isProfile() {
@@ -72,16 +74,20 @@ public class RedgifsRipper extends AbstractHTMLRipper {
 
     @Override
     public Document getFirstPage() throws IOException {
-        if (!isProfile().matches() && !isSearch().matches()) {
-            return Http.url(url).get();
-        } else if (isSearch().matches()) {
-            searchText = getGID(url).replace("-", " ");
-            return Http.url(
-                    new URL("https://api.redgifs.com/v1/gfycats/search?search_text=" + searchText + "&count=" + searchCount + "&start=" + searchStart*searchCount)).ignoreContentType().get();
-        } else {
-            username = getGID(url);
-            return Http.url(new URL("https://api.redgifs.com/v1/users/" +  username + "/gfycats?count=" + count))
-                       .ignoreContentType().get();
+        try {
+            if (!isProfile().matches() && !isSearch().matches()) {
+                return Http.url(url).get();
+            } else if (isSearch().matches()) {
+                searchText = getGID(url).replace("-", " ");
+                return Http.url(
+                        new URI("https://api.redgifs.com/v1/gfycats/search?search_text=" + searchText + "&count=" + searchCount + "&start=" + searchStart * searchCount).toURL()).ignoreContentType().get();
+            } else {
+                username = getGID(url);
+                return Http.url(new URI("https://api.redgifs.com/v1/users/" + username + "/gfycats?count=" + count).toURL())
+                        .ignoreContentType().get();
+            }
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
         }
     }
 
@@ -124,18 +130,18 @@ public class RedgifsRipper extends AbstractHTMLRipper {
     }
 
     @Override
-    public Document getNextPage(Document doc) throws IOException {
+    public Document getNextPage(Document doc) throws IOException, URISyntaxException {
         if (isSearch().matches()) {
             Document d = Http.url(
-                    new URL("https://api.redgifs.com/v1/gfycats/search?search_text=" + searchText
-                                    + "&count=" + searchCount + "&start=" + searchCount*++searchStart))
+                    new URI("https://api.redgifs.com/v1/gfycats/search?search_text=" + searchText
+                                    + "&count=" + searchCount + "&start=" + searchCount*++searchStart).toURL())
                        .ignoreContentType().get();
             return (hasURLs(d).isEmpty()) ? null : d;
         } else {
             if (cursor.equals("") || cursor.equals("null")) {
                 return null;
             } else {
-                Document d =  Http.url(new URL("https://api.redgifs.com/v1/users/" +  username + "/gfycats?count=" + count + "&cursor=" + cursor)).ignoreContentType().get();
+                Document d =  Http.url(new URI("https://api.redgifs.com/v1/users/" +  username + "/gfycats?count=" + count + "&cursor=" + cursor).toURL()).ignoreContentType().get();
                 return (hasURLs(d).isEmpty()) ? null : d;
             }
         }
@@ -182,11 +188,11 @@ public class RedgifsRipper extends AbstractHTMLRipper {
      * @return URL to video
      * @throws IOException
      */
-    public static String getVideoURL(URL url) throws IOException {
+    public static String getVideoURL(URL url) throws IOException, URISyntaxException {
         LOGGER.info("Retrieving " + url.toExternalForm());
 
         //Sanitize the URL first
-        url = new URL(url.toExternalForm().replace("/gifs/detail", ""));
+        url = new URI(url.toExternalForm().replace("/gifs/detail", "")).toURL();
 
         Document doc = Http.url(url).get();
         Elements videos = doc.select("script");
